hphp/hack/test/typecheck/inout/bad_inout_hint_return2.php.exp
File "bad_inout_hint_return2.php", line 4, characters 10-26:
Invalid return type (Typing[4184])
File "bad_inout_hint_return2.php", line 4, characters 17-18:
This is an inout parameter
File "bad_inout_hint_return2.php", line 3, characters 27-29:
It is incompatible with a normal parameter
