hphp/hack/test/typecheck/inout/bad_inout_hint_return2.php
<?hh // strict

function foo(): (function(int): int) {
  return (inout $x) ==> 42;
}
